--- a/localization/Filters/ekf/CMakeLists.txt
+++ b/localization/Filters/ekf/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(ekf main.cpp extended_kalman_filter.cpp extended_kalman_filter.h ../include/helper.h ../include/matplotlibcpp.h)
+add_executable(ekf main.cpp extended_kalman_filter.cpp extended_kalman_filter.h ../include/filters_common/helper.h ../include/filters_common/matplotlibcpp.h)
 
 target_link_libraries(ekf
         -lpython3.7m
