--- a/localization/Filters/pf/CMakeLists.txt
+++ b/localization/Filters/pf/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 
-add_executable(pf_test main.cpp ../include/filters_common/helper.h particle_filter.cpp particle_filter.h)
+add_executable(pf_test main.cpp ../include/filters_common/helper.h particle_filter.cpp ../../../include/bebop2_controller/localization/Filters/particle_filter.h)
 
 target_link_libraries(pf_test
         -lpython3.7m
